doc: update instructions

--- a/project_internship_mle.ipynb
+++ b/project_internship_mle.ipynb
@@ -36,16 +36,17 @@
     "\n",
     "**Task**:\n",
     "\n",
-    "The code presented is a first implementation but has a number of shortcomings in its structure and features (more on that in the conclusion). Your task consist in producing a refactoring, so as to be one step closer to a \"clean\" code.\n",
+    "The code presented is a first implementation but has a number of shortcomings in its structure (more on that in the conclusion). Your main task is to refactor the code from the notebook to python files. The goal of this refactoring is to solve the shortcomings listed above. Optionally, if you have the time and some ideas of features to introduce, feel free to do so.\n",
+    "\n",
     "\n",
     "**Evaluation**:\n",
     "\n",
     "Our goal here is two fold:\n",
     "- See how you understand a problem and adapt to an already given approach to tackle it.\n",
-    "- See how you can design new features.\n",
     "- See how you manipulate python code: understanding, ideas to refactor etc ...\n",
+    "- Eventually, see the idea of functionalities that you may have\n",
     "\n",
-    "The projects will be evaluated on the quality of the source code produced."
+    "The projects will be evaluated on the quality of the source code produced. The closer to \"clean code\", the better."
    ]
   },
   {
@@ -1414,8 +1415,15 @@
     "- There is no evaluation of the performances.\n",
     "- There is no testing\n",
     "\n",
-    "Additionaly a number we could think of some features to add, for example, what about looking at similar users to find a recommendation for our targeted user ?"
+    "Your main task is to refactor the code from the notebook to python files. The goal of this refactoring is to solve the shortcomings listed above. Optionally, if you have the time and some ideas of features to introduce, feel free to do so."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
